@@ -22,11 +22,12 @@
 /* 
  * Variable/Non-DB object display takes headers & objects
  */
+
 ?>
 <table class="tabledata" cellspacing="0">
 <tr>
 <?php foreach ($headers as $header) { ?>
-	<th class="th-top"><?php echo scrub_out($header); ?></th>
+	<th class="th-top"><?php echo $header; ?></th>
 <?php } ?>
 </tr>
 <?php 
